-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
It does not count the existing mirror number correctly, since the raw layout format stores the actual (mirror_count - 1) in its mirror count field, so that plain or non-mirrored PFL file which has 0 in the mirror count field logically has 1 mirror in it.
- is related to
-
LU-20013 'lfs mirror extend/create -N 1 FILE` tries to process file '1'
-
- Resolved
-